[package]
name = "wifi-connect"
version = "5.0.0"
authors = ["majorz"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"
edition = "2021"

[dependencies]
libc = "0.2"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
axum = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
nm = { git = "https://github.com/balena-io-modules/libnm-rs.git" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[profile.release]
lto = true
