[package]
name = "wifi-connect"
version = "5.0.0"
authors = ["majorz"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"
readme = "README.md"
repository = "https://github.com/balena-io-playground/wifi-connect-async"
license = "Apache-2.0"
keywords = ["network", "wifi", "access-point", "captive-portal", "network-manager"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
libc = "0.2"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
actix-web = "4"
actix-http = "3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
neli = { version = "0.6", features = ["async"] }
macaddr = "1"
byteorder = "1"
nm = { git = "https://github.com/balena-io-modules/libnm-rs.git" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[profile.release]
lto = true
